Try and fix the issue of video not displaying on mobile

--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,7 @@ header {
 
 .hero-gif {
     width: 600px;
+    height: auto;
     flex: 1;
 }
 
@@ -266,9 +267,6 @@ header {
 }
 
 .hero-gif video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
     border-radius: 0.3rem;
     box-shadow: 0px 0px 8px -3px rgba(11, 11, 16, 0.8);
 }
